fix(spec): measure the bindings a package ships, not the ones a script uses
The bindings investigation concluded that generated source beat every binding.
That conclusion came from the wrong measurements: it compared generated source
against `ctypes`, Fiddle and a wasm runtime, and never against the mechanism
each ecosystem actually ships native code with. Those differ by three orders of
magnitude, so the conclusion was wrong for four of the seven ecosystems.

Measured properly, per call, against a validator body of 47 ns:

| ecosystem | best        | mechanism                     | boundary |
| --------- | ----------- | ----------------------------- | -------- |
| C#        | 76 ns       | P/Invoke, SuppressGCTransition| ~1 ns    |
| Python    | 65 ns       | CPython extension module      | 27 ns    |
| Ruby      | 109 ns      | C extension                   | 65 ns    |
| Java      | 127 ns      | Panama FFM, trivial downcall  | 62 ns    |
| Go        | 119 ns      | cgo                           | 58 ns    |

Against each language's own generated source that is 21× for Python, 18× for
Ruby, 3.9× for Java, and 4.3× against handwritten for C#, which had no arm at
all before. The old numbers stand for what they measured: ctypes is 433 ns of
boundary, Fiddle 1,479 ns, wasmtime-py 30 µs.

Three details decide which half a binding lands in, and the harness shows each:
a `static final` MethodHandle and a global arena in Java (84 ns otherwise), a
real extension module rather than an FFI shim in Python and Ruby, and
`[SuppressGCTransition]` in C# — the one runtime where the naive version is
already fine.

What does not change is JavaScript: the package is tree shakeable and a binary
core is not, so npm keeps generated source whatever the others do. Go keeps it
too, because cgo costs cross compilation, static binaries and CGO_ENABLED=0 for
a 74 ns gain.

So the answer is a hybrid, and `spec/bridge` now emits both halves from the one
source: the Rust target also produces `#